--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ body {
     font-size: 64px;
     line-height: 1;
     font-weight: 700;
-    margin: 5px 0 6px -30px;
+    margin: 5px 0 6px 10px;
 }
 
 .weather-box .temperature span {
@@ -176,12 +176,11 @@ body {
 
 .weather-details {
     text-align: center;
-    position: absolute;
-    bottom: 25vh;
     left: 0;
     width: 100%;
     padding: 0 200px 0 10px;
     display: flex;
+    margin-top: -45px;
 }
 
 .weather-details .humidity,
@@ -362,38 +361,10 @@ body {
     display: flex;
 }
 
-@media only screen and (max-width: 1500px) {
-    .weather-details {
-        bottom: 38vh;
-    }
-}
-
 @media only screen and (max-width: 1300px) {
-    .weather-details {
-        bottom: 20vh;
-    }
-
     .hourly-forecast {
         width: 140vh;
         height: 138px;
-    }
-}
-
-
-@media only screen and (max-width: 1030px) {
-    .weather-details {
-        bottom: 45vh;
-    }
-}
-
-@media only screen and (max-width: 820px) {
-    .weather-details {
-        bottom: 24vh;
-    }
-}
-@media only screen and (max-width: 819px) {
-    .weather-details {
-        bottom: 45vh;
     }
 }
 
@@ -498,10 +469,6 @@ body {
         font-size: 38px;
     }
 
-    .weather-details {
-        bottom: 46vh;
-    }
-
     .hourly-forecast {
         width: 104vh;
     }
@@ -583,11 +550,6 @@ body {
     .weather-box {
         margin-left: -5px;
     }
-
-    .weather-details {
-        bottom: 50vh;
-    }
-
     .hourly {
         margin-top: 10px;
     }
@@ -639,8 +601,7 @@ body {
     }
 
     .weather-details {
-        bottom: 55vh;
-        padding: 0 210px 0 1px;
+        padding: 0 210px 0 0;
     }
 
     .weather-details i {
@@ -709,7 +670,7 @@ body {
     }
     
     .weather-details {
-        bottom: 69vh;
+        margin-top: 45vh;
         padding: 0 10px 0 40px;
     }
 
@@ -752,11 +713,11 @@ body {
     }
 
     .hourly {
-        margin-top: 50vh;
+        margin-top: 0px;
     }
 
     .hourly h2 {
-        font-size: 22px;
+        font-size: 20px;
     }
 
     .hourly-forecast {
@@ -862,36 +823,24 @@ body {
 }
 
 @media only screen and (max-width: 360px) {
-    .weather-details {
-        bottom: 50vh;
-    }
-
     .card {
         margin: 68vh 0 0 -3px;
         height: 198px;
     }
 
+    .weather-details{
+        margin-top: 35vh;
+    }
+    
     .hourly-forecast {
         width: 43vh;
     }
-
-    .hourly {
-        margin-top: 40vh;
-    }
 }
 
-@media only screen and (max-width: 359px) {
-    .weather-details {
-        bottom: 69vh;
-    }
-    
+@media only screen and (max-width: 359px) {  
     .card {
         margin: 85vh 0 0 -3px;
         height: 220px;
-    }
-
-    .hourly {
-        margin-top: 50vh;
     }
 
     .hourly-forecast {
@@ -909,10 +858,6 @@ body {
         margin: 83vh 0 0 -3px;
         width: 310px;
         height: 220px;
-    }
-
-    .hourly {
-        margin-top: 50vh;
     }
 
     .hourly-forecast {
@@ -934,7 +879,6 @@ body {
     }
 
     .weather-details {
-        bottom: 69vh;
         padding: 0 10px 0 20px;
     }
 
