--- a/style.css
+++ b/style.css
@@ -31,13 +31,9 @@ body {
     transition: height .7s ease, width .7s ease;
 }
 
-.content {
-    display: flex;
-}
-
 .search-box {
     position: relative;
-    width: 800cm;
+    width: 100%;
     height: 55px;
     background: rgba(179, 178, 178, 0.911);
     display: flex;
@@ -241,7 +237,7 @@ body {
 .not-found {
     position: absolute;
     text-align: center;
-    margin-top: 65px;
+    margin-top: 10px;
     padding: 0 30px 0 20px;
 }
 
